services/calibre-web/calibre-web-books-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\pitts\src\bin\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: calibre-web-books
  name: calibre-web-books
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8083
  selector:
    io.kompose.service: calibre-web-books
  type: ClusterIP
status:
  loadBalancer: {}
