services/calibre-web/calibre-web-comics-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\pitts\src\bin\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: calibre-web-comics
  name: calibre-web-comics
spec:
  ports:
    - name: "443"
      port: 443
      targetPort: 8083
  selector:
    io.kompose.service: calibre-web-comics
  type: ClusterIP
status:
  loadBalancer: {}
