services/calibre-web/calibre-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\pitts\src\bin\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
   # external-dns.alpha.kubernetes.io/hostname: books.k8s.crossfits.dpitts.us
  creationTimestamp: null
  labels:
    io.kompose.service: calibre-web
  name: calibre-web
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8083
  selector:
    io.kompose.service: calibre-web
  type: ClusterIP
status:
  loadBalancer: {}
