services/calibre-web/calibre-web-ingress.yml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
    labels:
      k8s-app: calibre-web
    name: calibre-web-books-ingress
    namespace: calibre-web
spec:
  virtualhost:
    fqdn: books.k8s.crossfits.dpitts.us
    tls:
      secretName: calibre-web-tls
  routes:
    - conditions:
      - prefix: /
      services:
        - name: calibre-web-books
          port: 443

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
    labels:
      k8s-app: calibre-web
    name: calibre-web-comics-ingress
    namespace: calibre-web
spec:
  virtualhost:
    fqdn: comics.k8s.crossfits.dpitts.us
    tls:
      secretName: calibre-web-tls
  routes:
    - conditions:
      - prefix: /
      services:
        - name: calibre-web-comics
          port: 443
